[gd_scene load_steps=34 format=2]

[ext_resource path="res://Enemies/Flying/Flying.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Die",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "Move",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 13, 9 )

[sub_resource type="CircleShape2D" id=31]
radius = 16.0

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 12.5, 9.75 )

[node name="Flying" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 29 )
animation = "Attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, 1 )
shape = SubResource( 30 )

[node name="See" type="RayCast2D" parent="."]

[node name="Attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2( -4, 0 )
shape = SubResource( 31 )

[node name="Timer" type="Timer" parent="Attack"]

[node name="Above_and_Below" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Above_and_Below"]
position = Vector2( -4, -1.25 )
shape = SubResource( 32 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Attack" to="." method="_on_Attack_body_entered"]
[connection signal="timeout" from="Attack/Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Above_and_Below" to="." method="_on_Above_and_Below_body_entered"]
